<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/review_no_words_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0">

    <ImageView
        android:id="@+id/review_no_words_image"
        android:contentDescription="@string/no_connection_content_description"
        android:layout_width="match_parent"
        android:layout_marginTop="72dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_astronaut_no_connection" />

    <TextView
        android:id="@+id/review_no_words_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_words_big"
        style="@style/NoConnectionBigTextStyle"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="4dp"
        android:paddingBottom="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/review_no_words_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_words_save_words"
        style="@style/NoConnectionDetailTextStyle"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="36dp"/>
</LinearLayout>