<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/start_up_logo"
        style="@style/StartUpTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/start_up_title_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/animated_logo"
        android:contentDescription="@string/yabu_astronaut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/astronaut_top"
        android:layout_marginEnd="120dp"
        android:src="@drawable/animated_astronaut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_up_logo"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/start_up_description"
        style="@style/StartUpDescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_up_description"
        android:layout_marginTop="@dimen/start_up_titles_margin_top"
        app:layout_constraintTop_toBottomOf="@id/start_up_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/start_up_continue_no_sign"
        style="@style/StartUpContinueTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_up_continue_no_sign"
        android:layout_marginTop="@dimen/start_up_titles_margin_top"
        app:layout_constraintTop_toBottomOf="@id/start_up_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</android.support.constraint.ConstraintLayout>
