<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/info_padding_top_2"
        android:orientation="vertical"
        android:background="@drawable/shape_scrim"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/info_callout_bubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="86dp"
                android:background="@drawable/ic_callout_bubble_middle_shadow"
                android:orientation="vertical"
                style="@style/CalloutBubbleStyle"
                android:elevation="4dp">

                <TextView
                    android:id="@+id/info_callout_title_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_tag"
                    style="@style/TagStyle"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/info_callout_title"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_callout_word"
                    style="@style/WordTitleStyleCallout" />

                <TextView
                    android:id="@+id/info_callout_reading"
                    android:paddingStart="16dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_callout_reading"
                    style="@style/PoweredJaStyle"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="end"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:contentDescription="@string/callout_favorite_button_content_description"
                        android:id="@+id/info_callout_review_button"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="4dp"
                        android:paddingBottom="4dp"
                        android:src="@drawable/star_button"
                        android:tint="@color/color500Grey"/>

                    <TextView
                        android:id="@+id/info_callout_common_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_tag"
                        style="@style/TagStyle"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/tag"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/info_callout_jlpt_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/JLPTN5"
                        style="@style/TagStyle"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/tag"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/colorJLPTN5"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/info_callout_definition_1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_callout_definition_1"
                    android:maxLines="2"
                    android:ellipsize="end"
                    style="@style/PoweredJaStyle" />

                <TextView
                    android:id="@+id/info_callout_definition_2"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_callout_definition_2"
                    android:maxLines="2"
                    android:ellipsize="end"
                    style="@style/PoweredJaStyle" />

                <TextView
                    android:id="@+id/info_callout_details_link"
                    android:paddingStart="16dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="32dp"
                    android:paddingTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/callout_link_details"
                    style="@style/PoweredJaStyle"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools">

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="36dp"
                    android:paddingBottom="16dp"
                    android:paddingStart="56dp"
                    android:paddingEnd="42dp"
                    android:text="@string/info_title_2"
                    style="@style/ExtractTitleStyleDetail"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/detail_extract"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:textColorLink="@color/colorDarkAccent"
                    android:paddingStart="56dp"
                    android:paddingEnd="58dp"
                    android:paddingTop="16dp"
                    android:maxLines="6"
                    android:text="@string/info_body_callout_text"
                    style="@style/ExtractTextStyleDetail"
                    android:textSize="12sp"/>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_alignParentBottom="true"
        android:text="@string/info_screen_text_3"
        style="@style/PoweredJaStyle"
        android:textColor="@color/color100Grey"/>
</RelativeLayout>

